<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_15sdp"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:includeFontPadding="true"
        android:text="@string/Welcome_to_MicroSoft"
        android:textIsSelectable="false"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_220sdp"
        android:src="@drawable/welcome_center"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_or_phone_number"
        android:padding="@dimen/_6sdp"
        android:background="@drawable/email_box"
        app:layout_constraintTop_toBottomOf="@+id/welcomeImage"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/email_box"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:layout_marginTop="@dimen/_8sdp"/>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:background="@drawable/button_shape"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_8sdp"/>
        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/MicrosoftBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_18sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_in_with"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/black"/>



</androidx.constraintlayout.widget.ConstraintLayout>