<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8sdp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ap"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_margin="@dimen/_8sdp"
        android:src="@drawable/ap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Anurag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/anurag_prasad"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ap"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/_918920468539"
        android:textAllCaps="true"
        android:textColor="#6A6A6A"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ap"
        app:layout_constraintTop_toBottomOf="@id/Anurag" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:src="@drawable/ic_baseline_expand_more_24"
        app:layout_constraintStart_toEndOf="@id/Anurag"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ap">

        <TextView
            android:id="@+id/tvMyDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/my_day"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/ic_outline_wb_sunny_24" />

        <TextView
            android:id="@+id/tvImportant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/important"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/ic_baseline_star_border_24" />

        <TextView
            android:id="@+id/tvPlanned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/planned"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/ic_baseline_list_alt_24" />

        <TextView
            android:id="@+id/tvAssignedTome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/assigned_to_me"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/ic_baseline_person_outline_24" />

        <TextView
            android:id="@+id/tvTaskHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/tasks"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/ic_outline_home_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/line"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_5sdp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout1">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_gravity="center"
            android:src="@drawable/house" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_12sdp"
            android:src="@drawable/suitcase"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/work"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_10sdp"
        android:padding="@dimen/_12sdp"
        android:text="New list"
        android:textColor="@color/MicrosoftBlue"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_add_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:src="@drawable/ic_baseline_create_new_folder_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_4sdp"/>



</androidx.constraintlayout.widget.ConstraintLayout>